<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".FirstPage">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/firstPageScrollBar"
            tools:layout_editor_absoluteY="16dp">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                    android:text="@string/take_photo_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_take_photo" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
            />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
                    android:id="@+id/image_view_first" android:layout_marginTop="72dp"
                    app:layout_constraintTop_toBottomOf="@+id/button_take_photo"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.498"
                    android:contentDescription="@string/image_view_des_first"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
    <Button
            android:text="@string/go_to_second_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/next_page_button" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
</android.support.constraint.ConstraintLayout>